Keep more ParenType parameter flags when canonicalizing function types (#17369)

This will also preserve @escaping and @autoclosure, which were previously
dropped. This could lead to mismatches between expected and actual
canonical types for serialization cross-references.

https://bugs.swift.org/browse/SR-8045, likely others
(cherry picked from commit 8abaaea2c9bad93f76faf3a79d705439f47ee500)